--- a/examples/example2-formatters.html
+++ b/examples/example2-formatters.html
@@ -76,6 +76,9 @@
 				d["effortDriven"] = (i % 5 == 0);
 			}
 
+            data[1000*1000] = data[0];
+            data[data.length-1].title = "Task " + data.length;
+
 			grid = new Slick.Grid($("#myGrid"), data, columns, options);
 		})
 
